Update meta description

--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
 		<link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<meta name="theme-color" content="#000000" />
-		<meta name="description" content="Web site created using create-react-app" />
+		<meta name="description" content="Find and analyze chords." />
 		<link rel="stylesheet" title="Light" href="%PUBLIC_URL%/themes/light.css" />
 		<link rel="alternate stylesheet" title="Dark" href="%PUBLIC_URL%/themes/dark.css" />
 		<link rel="apple-touch-icon" href="logo192.png" />
